Resolves: fdo#86978 append formula cells to track instead of tree

Cells in FormulaTree are assumed to be tracked already and their
dependents be notified. Also postpone tracking until all listeners are
established.

(cherry picked from commit 573f5dfba805b733dd2da62bde3cd5d9d25879d9)

Conflicts:
	sc/source/core/data/formulacell.cxx

Change-Id: I7f27fba979fe231e3d3cd071fcc8a273142cb3f3
Reviewed-on: https://gerrit.libreoffice.org/13523
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit d210265a1b6c4d7b405ef6e79fd30395ca1bc0aa)